# speech_to_text_whisper_tkinter

./: .gitignore  README.md  Verbesserung_ideen.md  anleitung.md  config_example.json  hallucination.json  pyproject.toml  requirements.txt  speech_to_text.py  start_app.bat
Sprache_zu_text/: README.md  Verbesserung_ideen.md  speech_to_text.py
