[project]
name = "speech-to-text-whisper-tkinter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "customtkinter==5.2.0",
    "keyboard==0.13.5",
    "numpy==1.24.3",
    "openai==1.3.0",
    "pyautogui==0.9.54",
    "pyperclip==1.8.2",
    "sounddevice==0.4.6",
]
